--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 package-lock.json
 
+.env
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
